--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,21 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url();
+$home-image: url(../dist/img/background.jpg);
+$background-opacity: 0.9;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
+}
+
+@mixin background {
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  }
 }
 
 * {
@@ -12,6 +23,7 @@ $home-image: url();
 }
 
 body {
+  @include background;
   background: $primary-color;
   color: #fff;
   height: 100%;
